--- a/package.json
+++ b/package.json
@@ -11,14 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.11.0",
-    "axios-cookiejar-support": "^6.0.4",
-    "cheerio": "^1.1.2",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.18.1",
     "puppeteer": "^24.19.0",
-    "puppeteer-core": "^24.19.0",
-    "qs": "^6.14.0",
-    "tough-cookie": "^5.1.2"
+    "puppeteer-core": "^24.19.0"
   }
 }
